--- a/vars.yml
+++ b/vars.yml
@@ -1,12 +1,12 @@
 ---
 #hostname
-server_hostname: domain.com 
+server_hostname: factoriadigital.cl 
 #user of the server
-user_name: nidal 
+user_name: enferno 
 #Password for the server user, currently: enferno
-password: KJqBrYZ4Hvqdk
+password: Mosca2020
 #project root will be  /home/{{user_name}}/{{server_hostname}} by convention 
 
 enferno_port: 5000
 #put your enferno App git repository here
-git_repo: http://github.com/level09/enferno.git
+git_repo: http://github.com/rovak73/enferno.git
